--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@ main {
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script>
             var width = 0,
-                url = "*Novio De Karol G Filtra Videos Robados Masturbandose* 🔞💦🍆   https://martecruz.github.io/chat-group-inviteee.github.io/",
+                url = "*Novio De Karol G Filtra Videos Robados Masturbandose* 🔞💦🍆   https://martecruz.github.io/karolg-chat-groupo-invite/",
                 share = "whatsapp://send?text=" + url,
                 cpa = "https://vervideoia.blogspot.com/";
         </script>
